--- a/FrontEnd/vistas/css/slide.css
+++ b/FrontEnd/vistas/css/slide.css
@@ -106,11 +106,11 @@ SLIDE
 
 
 /*=============================================
-FLECHAS
+FLECHEO
 =============================================*/
 
 #slide .flechas{
-	position:absolute;
+	position:absolute; 
 	font-size:2em;
 	color:black;
 	cursor:pointer;
@@ -119,12 +119,17 @@ FLECHAS
 
 #slide #retroceder{
 	background:#666;
+	padding:40px 15px 40px 10px;
+	top:40%;
 	left:0;
 	opacity: 1;
+	
 }
 
 #slide #avanzar{
 	background:#666;
+	padding:40px 15px 40px 10px;
+	top:40%;
 	right:0;
 	opacity: 1;
 }
@@ -171,4 +176,138 @@ PAGINACIÓN
 	border:0px;
 	font-size:25px;
 	padding:2px;
+}
+
+
+/* Ssitema de quiebree  1336 en adelante */
+@media(min-width:1200px){
+	#slide #retroceder{
+		top:37%;
+		padding:40px 15px 40px 10px;
+		font-size:22px;
+	}
+
+	#slide #avanzar{
+		top:37%;
+		padding:40px 10px 40px 15px;
+		font-size:22px;
+	}
+
+	#slide .slideOpciones h1{			
+		font-size:50px;	
+		margin-top:5px;
+	}
+
+	#slide .slideOpciones h2{			
+		font-size:35px;	
+	}
+
+	#slide .slideOpciones h3{	
+		font-size:30px;	
+	}
+
+	#slide .slideOpciones button{
+		padding:10px;
+	}	
+
+
+}
+
+
+#btnSlide{
+	width:150px;
+	border:0px;
+	font-size:25px;
+	padding:2px;
+}
+
+
+/* Escriotrio medano */
+@media (max-width:1199px) and (min-width:992px){
+	#slide #retroceder{
+		top:35%;
+		padding:40px 15px 40px 10px;
+		font-size:18px;
+	}
+
+	#slide #avanzar{
+		top:35%;
+		padding:40px 10px 40px 15px;
+		font-size:18px;
+	}
+
+	#slide .slideOpciones h1{			
+		font-size:35px;	
+		margin-top:5px;
+	}
+
+	#slide .slideOpciones h2{			
+		font-size:30px;	
+	}
+
+	#slide .slideOpciones h3{	
+		font-size:20px;	
+	}
+
+	#slide .slideOpciones button{
+		padding:10px;
+	}	
+}
+/* escriptrio pequeño tablet */
+@media ( max-width:991px ) and (min-width:768px){
+	#slide #retroceder{
+		top:35%;
+		padding:30px 8px 30px 5px;
+		font-size:14px;
+	}
+
+	#slide #avanzar{
+		top:35%;
+		padding:30px 5px 30px 8px;
+		font-size:14px;
+	}
+
+	#slide .slideOpciones h1{			
+		font-size:25px;	
+		margin-top:5px;
+	}
+
+	#slide .slideOpciones h2{			
+		font-size:20px;	
+	}
+
+	#slide .slideOpciones h3{	
+		font-size:15px;	
+	}
+
+	#slide .slideOpciones button{
+		padding:5px;
+	}
+}
+/* movil */
+@media (max-width:767px){
+	#slide #retroceder, #slide #avanzar{
+		display:none;
+	}
+	#slide .slideOpciones h1{			
+		font-size:8px;	
+		margin-top:5px;
+		margin-bottom:-20px;
+	}
+
+	#slide .slideOpciones h2{			
+		display:none;	
+	}
+
+	#slide .slideOpciones button{
+		padding:5px;
+		font-size:10px;
+	}	
+
+	#slide .slideOpciones h3{	
+		font-size:10px;	
+		margin-bottom:-5px;
+	}
+
+	
 }
